# nto2_team

./: Makefile  README.md  nto2_team_ans.ipynb  pyproject.toml
data/raw/: book_genres.csv  candidates.csv  genres.csv  sample_submission.csv  targets.csv  users.csv
docs/: data.md  task.md
output/models/: features.json  model_fold_1.txt  tfidf_vectorizer.pkl
output/submissions/: submission.csv  submission_gpu_enhanced_20251209_075527.csv
src/baseline/: config.py  constants.py  data_processing.py  evaluate.py  features.py  predict.py  prepare_data.py  temporal_split.py  train.py  validate.py
src/baseline/.ipynb_checkpoints/: config-checkpoint.py  data_processing-checkpoint.py  features-checkpoint.py  train-checkpoint.py
